Set theme jekyll-theme-minimal

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
 title: Sun Huachuang - Happy Hacking
 email: huachuang20@gmail.com
 description: >-
